crates/compiler/cypress/tests/snapshots/test_parse__opaque_reference_expr_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "@Age\n\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr OpaqueName=>OpaqueName@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
OpaqueName("@Age")

[=== formatted below ===]

