crates/compiler/cypress/tests/snapshots/test_parse__opaque_simple_moduledefs_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "Age := U8\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginTypeOrTypeAlias
            UpperIdent=>UpperIdent@0
            InlineTypeColonEqual=>OpColonEqual@1
            TypeName=>UpperIdent@2
        EndTypeOrTypeAlias)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
TypeAliasOpaque(UpperIdent("Age"), Name("U8"))

[=== formatted below ===]

