crates/compiler/cypress/tests/snapshots/test_parse__opaque_type_def_with_newline_expr_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "a : e\nNa :=\n    e\ne0\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginTypeOrTypeAlias
            Ident=>LowerIdent@0
            InlineTypeColon=>OpColon@1
            Ident=>LowerIdent@2
        EndTypeOrTypeAlias)
        (BeginTypeOrTypeAlias
            UpperIdent=>UpperIdent@3
            InlineTypeColonEqual=>OpColonEqual@4
            Ident=>LowerIdent@5
        EndTypeOrTypeAlias)
        HintExpr
        Ident=>LowerIdent@6
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
TypeAlias(Ident("a"), Name("e"))
TypeAliasOpaque(UpperIdent("Na"), Name("e"))
Ident("e0")

[=== formatted below ===]

